<resources>
    <string name="app_name">GUInventory App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GUInventory APP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="summaryEndpoint">Introducir la URL del servicio res</string>
    <string name="titleEndpoint">URL</string>
    <string name="title_activity_settings">Settings</string>

    <string name="status_item_onLoan">Prestado</string>
    <string name="status_item_damaged">Averiado</string>
    <string name="status_item_available">Disponible</string>

    <string name="salir_dialog">Salir</string>
    <string name="aceptar_dialog">Añadir Préstamo</string>


    <!-- Strings for toasts and code -->
    <string name="warning_date_empty">Por favor rellene el campo Date.</string>
    <string name="warning_barcode_empty">Por favor rellene el campo Barcode.</string>
    <string name="warning_item_exists">El Item ya existe.</string>
    <string name="warning_date_format">EL formato de la fecha no es correcto</string>
    <string name="warning_date_notvalid">La fecha introducida es incorrecta</string>

    <string name="item_added">"Item Añadido.</string>
    <string name="code_bar_not_recognized">No se reconoce ningún código de barras code_39.</string>
    <string name="not_implemented_loan">No está implementado todavía. Nuevos préstamos en: Miembros->click en miembro.</string>
    <string name="not_implemented">No está implementado todavía.</string>
    <string name="loan_created"> Prestamo Creado</string>


    <string name="item_with_barcode">EL Item con Barcode = </string>
    <string name="item_with_barcode_onloan"> se encuentra prestado</string>
    <string name="item_with_barcode_notExists"> no existe</string>





    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="state_entries">
        <item>Averiado</item>
        <item>Disponible</item>
        <item>Prestado</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha_de_inclusion">Fecha Inclusión:</string>
    <string name="fecha_de_fin_prestamo">Fecha Fin Préstamo:</string>
    <string name="owner">Dueño:</string>
    <string name="prestado_a">Prestado a:</string>
    <string name="add_item_title">Añadir Item Nuevo</string>
    <string name="add_item_barcode">Barcode :</string>
    <string name="add_item_barcode_hint">Ej: RPI-000</string>
    <string name="add_item_date">Fecha :</string>
    <string name="add_item_date_hint">Ej: 2018-10-25</string>
    <string name="add_item_resource">Dueño :</string>
    <string name="add_item_add_button">Añadir</string>
    <string name="add_item_cancel_button">Cancelar</string>
    <string name="member_dialog_name">Nombre:</string>
    <string name="member_dialog_lastname">Apellidos:</string>
    <string name="member_dialog_email">E-Mail:</string>
    <string name="memeber_dialog_enddate">Fecha Fin:</string>
    <string name="item_dialog_state">Estado:</string>
</resources>
